src/components/App/App.css
.content {
  width: 100%;
  max-width: 1280px;
  min-width: 320px;
  margin: 0 auto;
}

.section {
  padding: 0 18px;
}

@media (min-width: 768px) {
  .section {
    padding-inline: 30px;
  }
}

@media (min-width: 1280px) {
  .section {
    padding-inline: 70px;
  }
}

